--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
     "predeploy": "npm run build",
-    "deploy": "gh-pages --dist dist --branch 'gh-pages' --message \"Updated at $(echo $(date '+%Y-%m-%d %H:%M:%S')) by gh-pages\""
+    "deploy": "gh-pages --dist dist --branch gh-pages --message \"Updated by gh-pages\""
   },
   "keywords": [],
   "author": "kottofey <romeokontakt@yandex.ru>",
   "license": "none",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.5",
     "@eslint/js": "^9.2.0",
     "css-loader": "^7.1.1",
-    "eslint": "^9.2.0",
+    "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -31,6 +32,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.29.1",
     "swiper": "^11.1.1"
   }
 }
