--- a/.eslintrc
+++ b/.eslintrc
@@ -1,55 +1,61 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:prettier/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings"
-  ],
-  "ignorePatterns": [
-    "node_modules",
-    "dist",
-    "build"
-  ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "prettier",
-    "import"
-  ],
-  "rules": {
-    "import/no-unresolved": [ 2, { "caseSensitive": false } ],
-    "import/order": [ 2,
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ],
-        "newlines-between": "always"
-      }
-    ],
-    "indent": [ "error", 2 ],
-    "linebreak-style": [ 0, "windows" ],
-    "prettier/prettier": "error",
-    "quotes": ["error", "single"]
-//    "semi": ["error", "never"]
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js"],
-        "moduleDirectory": ["node_modules", "src/"]
-      }
-    }
-  }
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true
+	},
+	"extends": [
+		"eslint:recommended",
+		"plugin:import/errors",
+		"plugin:import/warnings",
+		"plugin:prettier/recommended"
+	],
+	"ignorePatterns": [
+		"node_modules",
+		"dist",
+		"build"
+	],
+	"parser": "@babel/eslint-parser",
+	"parserOptions": {
+		"requireConfigFile": false,
+		"babelOptions": {
+			"presets": ["@babel/preset-env"]
+		},
+		"sourceType": "module",
+		"ecmaVersion": "latest",
+		"ecmaFeatures": {
+			"jsx": true
+		}
+	},
+	"plugins": [
+		"prettier",
+		"import"
+	],
+	"rules": {
+		"import/no-unresolved": [2, {"caseSensitive": false}],
+		"import/order": [2, {
+			"newlines-between": "always",
+			"groups": [
+					"builtin",
+					"external",
+					"internal",
+					"parent",
+					"sibling",
+					"index"
+				]
+			}
+		],
+		"indent": ["error", "tab"],
+		"linebreak-style": [0, "windows"],
+		"quotes": ["error", "single"],
+		"prettier/prettier": ["error"]
+	},
+	"settings": {
+		"import/resolver": {
+			"node": {
+				"extensions": [".js"],
+				"moduleDirectory": ["node_modules", "src/"]
+			}
+		}
+	}
 }
