--- a/package.json
+++ b/package.json
@@ -1,38 +1,43 @@
 {
-  "name": "webcore-finalversion",
-  "version": "1.0.0",
-  "description": "Kata WebCore Final Version",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages --dist dist --branch gh-pages --message \"Updated by gh-pages\""
-  },
-  "keywords": [],
-  "author": "kottofey <romeokontakt@yandex.ru>",
-  "license": "none",
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.24.5",
-    "@eslint/js": "^9.2.0",
-    "css-loader": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "gh-pages": "^6.1.1",
-    "globals": "^15.2.0",
-    "html-loader": "^5.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "prettier": "^3.2.5",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "eslint-plugin-import": "^2.29.1",
-    "swiper": "^11.1.1"
-  }
+	"name": "webcore-finalversion",
+	"version": "1.0.0",
+	"description": "Kata WebCore Final Version",
+	"main": "index.js",
+	"scripts": {
+		"dev": "webpack --mode development",
+		"build": "webpack --mode production",
+		"start": "webpack-dev-server --mode development --open",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages --dist dist --branch gh-pages --message \"Updated by gh-pages\""
+	},
+	"keywords": [],
+	"author": "kottofey <romeokontakt@yandex.ru>",
+	"license": "none",
+	"devDependencies": {
+		"@babel/core": "^7.24.5",
+		"@babel/eslint-parser": "^7.24.5",
+		"@babel/polyfill": "^7.12.1",
+		"@babel/preset-env": "^7.24.5",
+		"@eslint/eslintrc": "^3.0.2",
+		"@eslint/js": "^9.2.0",
+		"babel-loader": "^9.1.3",
+		"css-loader": "^7.1.1",
+		"eslint": "^8.57.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-prettier": "^5.1.3",
+		"gh-pages": "^6.1.1",
+		"globals": "^15.2.0",
+		"html-loader": "^5.0.0",
+		"html-webpack-plugin": "^5.6.0",
+		"prettier": "^3.2.5",
+		"style-loader": "^4.0.0",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4"
+	},
+	"dependencies": {
+		"swiper": "^11.1.1"
+	}
 }
