--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
 	"keywords": [],
 	"author": "kottofey <romeokontakt@yandex.ru>",
 	"license": "none",
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"last 2 versions",
+		"Firefox ESR",
+		"not OperaMini All",
+		"not dead"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.24.5",
 		"@babel/eslint-parser": "^7.24.5",
@@ -20,6 +31,7 @@
 		"@babel/preset-env": "^7.24.5",
 		"@eslint/eslintrc": "^3.0.2",
 		"@eslint/js": "^9.2.0",
+		"autoprefixer": "^10.4.19",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^7.1.1",
 		"eslint": "^8.57.0",
@@ -27,11 +39,16 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prettier": "^5.1.3",
+		"file-loader": "^6.2.0",
 		"gh-pages": "^6.1.1",
 		"globals": "^15.2.0",
 		"html-loader": "^5.0.0",
 		"html-webpack-plugin": "^5.6.0",
+		"mini-css-extract-plugin": "^2.9.0",
+		"postcss-loader": "^8.1.1",
 		"prettier": "^3.2.5",
+		"sass": "^1.77.2",
+		"sass-loader": "^14.2.1",
 		"style-loader": "^4.0.0",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
